--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "sharp": "^0.34.3",
+    "swr": "^2.3.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
