--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.1",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "next": "^15.5.2",
     "next-auth": "^4.24.11",
